--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,69 +4,14 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainActivity">
+    tools:context=".activity.MainActivity">
 
-   <TextView
-       android:id="@+id/textView3"
-       android:layout_width="wrap_content"
-       android:layout_height="wrap_content"
-       android:layout_marginTop="15dp"
-       android:layout_marginEnd="10dp"
-       android:text="Version 1.0"
-       app:layout_constraintEnd_toEndOf="parent"
-       app:layout_constraintTop_toTopOf="parent" />
 
-   <TextView
-       android:id="@+id/textView2"
-       android:layout_width="205dp"
-       android:layout_height="125dp"
-       android:layout_marginTop="50dp"
-       android:text="Momoir"
-       android:textAlignment="center"
-       android:textColor="#020202"
-       android:textSize="50dp"
-       android:textStyle="italic"
-       app:layout_constraintBottom_toBottomOf="parent"
+   <androidx.viewpager2.widget.ViewPager2
+       android:id="@+id/top_viewpager2"
+       android:layout_width="match_parent"
+       android:layout_height="300dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
-       app:layout_constraintTop_toTopOf="parent"
-       app:layout_constraintVertical_bias="0.237" />
-
-   <EditText
-       android:id="@+id/editTextTextPersonName2"
-       android:layout_width="280dp"
-       android:layout_height="53dp"
-       android:layout_marginTop="52dp"
-       android:ems="10"
-       android:inputType="textPersonName"
-       android:hint="ID"
-       app:layout_constraintEnd_toEndOf="@+id/textView2"
-       app:layout_constraintHorizontal_bias="0.493"
-       app:layout_constraintStart_toStartOf="@+id/textView2"
-       app:layout_constraintTop_toBottomOf="@+id/textView2" />
-
-   <EditText
-       android:id="@+id/editTextTextPassword3"
-       android:layout_width="280dp"
-       android:layout_height="55dp"
-       android:ems="10"
-       android:hint="password"
-       android:inputType="textPassword"
-       app:layout_constraintEnd_toEndOf="@+id/editTextTextPersonName2"
-       app:layout_constraintStart_toStartOf="@+id/editTextTextPersonName2"
-       app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName2" />
-
-   <Button
-       android:id="@+id/button"
-       android:layout_width="272dp"
-       android:layout_height="52dp"
-       android:layout_marginTop="20dp"
-       android:text="로그인"
-       android:textAllCaps="false"
-       android:backgroundTint="@color/black"
-       app:iconTint="#201919"
-       app:layout_constraintEnd_toEndOf="@+id/editTextTextPassword3"
-       app:layout_constraintStart_toStartOf="@+id/editTextTextPassword3"
-       app:layout_constraintTop_toBottomOf="@+id/editTextTextPassword3" />
-
+       app:layout_constraintTop_toTopOf="parent" />
 </androidx.constraintlayout.widget.ConstraintLayout>
