--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -13,5 +13,36 @@
        android:layout_height="300dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
-       app:layout_constraintTop_toTopOf="parent" />
+       app:layout_constraintTop_toTopOf="parent" >
+
+   </androidx.viewpager2.widget.ViewPager2>
+
+   <com.google.android.material.tabs.TabLayout
+       android:id="@+id/tabLayout"
+       android:layout_width="wrap_content"
+       android:layout_height="50dp"
+       app:layout_constraintEnd_toEndOf="@+id/top_viewpager2"
+       app:layout_constraintStart_toStartOf="@+id/top_viewpager2"
+       app:layout_constraintTop_toBottomOf="@+id/top_viewpager2"
+       app:tabBackground="@drawable/tab_selector"
+       app:tabGravity="center"
+       app:tabIndicatorHeight="0dp" />
+
+   <Space
+       android:layout_width="match_parent"
+       android:layout_height="88dp"
+       app:layout_constraintEnd_toEndOf="parent"
+       app:layout_constraintStart_toStartOf="parent"
+       app:layout_constraintTop_toBottomOf="@+id/tabLayout" />
+
+   <com.google.android.material.bottomnavigation.BottomNavigationView
+       android:layout_width="match_parent"
+       android:layout_height="wrap_content"
+       app:menu="@menu/bottom_nav"
+       app:itemIconTint="@drawable/bottom_navi_selector_color"
+       app:itemTextColor="@drawable/bottom_navi_selector_color"
+       app:layout_constraintBottom_toBottomOf="parent"
+       app:layout_constraintEnd_toEndOf="parent"
+       app:layout_constraintStart_toStartOf="parent" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
