--- a/app/src/main/res/layout/activity_read.xml
+++ b/app/src/main/res/layout/activity_read.xml
@@ -1,10 +1,22 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+
+<layout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
+    xmlns:tools="http://schemas.android.com/tools">
+    <data>
+        <variable
+            name="viewModel"
+            type="com.sbsj.memosbsj.viewmodel.MainViewModel" />
+    </data>
+
+<androidx.constraintlayout.widget.ConstraintLayout
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    tools:context=".activity.WriteActivity">
+    tools:context=".activity.ReadActivity">
+
+
+
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
@@ -23,23 +35,19 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent">
 
-            <EditText
-                android:id="@+id/write_title_et"
+            <TextView
+                android:id="@+id/read_title_tv"
                 android:layout_width="match_parent"
                 android:layout_height="48dp"
                 android:layout_weight="1"
                 android:ems="10"
-                android:hint="제목(15자까지)"
-                android:inputType="textPersonName"
                 android:maxLength="15" />
 
-            <EditText
-                android:id="@+id/write_content_et"
+            <TextView
+                android:id="@+id/read_content_tv"
                 android:layout_width="match_parent"
                 android:layout_height="200dp"
                 android:gravity="top|left"
-                android:hint="내용 (300자까지)"
-                android:inputType="text|textMultiLine"
                 android:lines="20"
                 android:maxLength="300"
                 android:scrollbars="vertical"
@@ -80,7 +88,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_weight="0.7"
-                    android:text="작성" />
+                    android:text="삭제" />
 
                 <Space
                     android:layout_width="wrap_content"
@@ -95,3 +103,4 @@
     </androidx.constraintlayout.widget.ConstraintLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
+    </layout>
