--- a/app/src/main/res/layout/item_writtenlist.xml
+++ b/app/src/main/res/layout/item_writtenlist.xml
@@ -17,15 +17,33 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
 
-        <TextView
-            android:id="@+id/writtenList_ll_tv_title"
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_margin="10dp"
             android:layout_weight="2"
-            android:text="제목입니당!"
-            android:textColor="#150000"
-            android:textSize="20dp" />
+            android:weightSum="5"
+            android:orientation="horizontal">
+
+            <TextView
+                android:id="@+id/writtenList_ll_tv_title"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_margin="10dp"
+                android:layout_weight="4"
+                android:text="제목입니당!"
+                android:textColor="#150000"
+                android:textSize="20dp" />
+
+            <ImageButton
+                android:id="@+id/writtenList_ll_btn_delete"
+                android:layout_width="wrap_content"
+                android:layout_margin="7dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:background="#00FFFFFF"
+                android:src="@android:drawable/ic_delete"
+                />
+        </LinearLayout>
 
         <TextView
             android:id="@+id/writtenList_ll_tv_date"
