--- a/app/src/main/res/layout/activity_read.xml
+++ b/app/src/main/res/layout/activity_read.xml
@@ -114,6 +114,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_weight="0.45"
+
                     android:text="취소" />
 
                 <Space
@@ -124,6 +125,8 @@
                 </Space>
 
                 <Button
+                    android:focusable="true"
+
                     android:id="@+id/read_modify_btn"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
@@ -138,6 +141,7 @@
                 </Space>
 
                 <Button
+                    android:focusableInTouchMode="true"
                     android:id="@+id/read_delete_btn"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
