naver translation 적용

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -13,7 +13,7 @@
 
 
 <androidx.constraintlayout.widget.ConstraintLayout
-
+   android:id="@+id/mainAct_allView_cl"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".activity.MainActivity">
